add span tag to fix the color issue in the output massage function

--- a/style.css
+++ b/style.css
@@ -49,6 +49,13 @@ button {
     margin-top: 2em;
 }
 
-div #totalInt p {
+div #totalInt {
     margin-left: 4em;
+}
+
+#siOutput-11,
+#siOutput-21,
+#siOutput-31,
+#siOutput-41 {
+    background-color: yellow;
 }
