--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ body {
 
 .container {
     margin: 1em;
+    margin-left: 3em;
+    margin-right: 3em;
     padding: 1em;
     background: #ffff;
     border-radius: 2em;
@@ -26,18 +28,19 @@ form label {
 }
 
 form label[for="intrest"] {
-    padding-right: 2.2em;
+    padding-right: 2.1em;
 }
 
 form label[for="years"] {
-    margin-right: -px;
+    margin-right: -25px;
 }
 
 button {
     position: absolute;
-    bottom: -10px;
+    bottom: -11px;
     margin-top: 5px;
     margin-left: 5em;
+    font-size: 12px;
 }
 
 #copy {
