--- a/style.css
+++ b/style.css
@@ -56,9 +56,10 @@ div #totalInt {
     margin-left: 4em;
 }
 
-#siOutput-11,
+
+/* #siOutput-11,
 #siOutput-21,
 #siOutput-31,
 #siOutput-41 {
     background-color: yellow;
-}
+} */
